--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "pink",
   "version": "14.0.0",
   "private": true,
-  "description": "Личный проект «Пинк» от HTML Academy",
+  "description": "descriptor",
   "devDependencies": {
     "@htmlacademy/editorconfig-cli": "1.x",
     "autoprefixer": "8.3.x",
